--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 
 .selected {
   background-color: yellowgreen;
+  outline: transparent;
 }
 
 .error {
@@ -23,4 +24,5 @@
 
 .error-message {
   color: red;
+  outline: transparent;
 }
