--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,9 @@
   color: red;
   outline: transparent;
 }
+
+.task {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  border-radius: 10px;
+}
